# txline-trading-agent

./: .dockerignore  .env.example  .gitignore  .prettierignore  Anchor.toml  Dockerfile  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.md  tsconfig.base.json  tsconfig.json  turbo.json
docs/: BRIEF.md  BUILD_PLAN.md  DECISIONS.md
docs/audit/: M8-audit.md
docs/research/: M0-recon-findings.md  quant-methods.md  txline-api.md  txline-onchain.md  wire-capture-2026-06-28.md
docs/runbooks/: M4-devnet.md  M6-agent.md
docs/submission/: DEMO-SCRIPT.md  TECHNICAL.md
programs/agent_ledger/: Cargo.toml
programs/agent_ledger/src/: errors.rs  lib.rs  logic.rs  state.rs  txline_cpi.rs
scripts/: check-core-purity.sh  check-standards.sh
tools/devnet/: package.json  tsconfig.json
tools/devnet/src/: backtest-config.ts  backtest-run.ts  backtest-sweep.ts  commit-demo.ts  demo-dashboard.ts  prove-odds-e2e.ts  prove-odds-live.ts  seed-dashboard.ts  settle-e2e.ts
