[package]
name = "agent_ledger"
version = "0.1.0"
description = "Commit-reveal odds-trading ledger that settles by CPI into the TxLINE txoracle validate_stat."
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_ledger"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
